# MasterSpeakAI_Streamlit

./: .gitignore  README.md  init_db.py  pyproject.toml  requirements.txt  test.db
backend/: database.py  main.py  schemas.py  test_open_ai.py
frontend/: app.py
frontend/pages/: 0_Home.py  1_Speech_Analyis.py  1_Speech_Analysis.py  2_Database_Viewer.py  3_Prompt_Settings.py  4_Prompt_Viewer.py  5_Model_Settings.py  6_Model_Settings_Viewer.py
